--- a/index.html
+++ b/index.html
@@ -1,111 +1,245 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<title>My Cv</title>
-	<link rel="stylesheet" href="style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-	<div class="header">
-	<h1>Zaman Ahmad</h1>
-	</div>
-	<div class="sidebar">
-			<img src="img.jpg" alt="My_Picture" height="200px" width="200px">
-	</div>
+    <header>
+        <section class="img">
+            <img src="img.jpg" height="270px" width="250px" alt="">
+        </section>
+        <section class="name">
+            <h1>Zaman Ahmad</h1>
+            <section class="designation">
+                <h6> MEAN Stack Developer </h6>
+            </section>
+            <section class="vital">
+                <h3>Ciriculum Vital</h3>
+            </section>
+        </section>
+    </header>
+    <nav>
+
+    </nav>
+    <maincontent class="mc">
+        <section class="mcl">
+            <section class="heading">
+                <h1>Contact</h1>
+            </section>
+            <section class="detail">
+                <section class="set">
+                    <section class="icon">
+                        <i class="fa fa-3x fa-phone-square"></i>
+                    </section>
+                    <section class="text">
+                        0320-6894708
+                    </section>
+                </section>
+
+                <section class="set">
+                    <section class="icon">
+                        <i class="fa fa-3x fa-home"></i>
+                    </section>
+                    <section class="text">
+                        House#40 beltax colony thokar niaz baig multan road lahore
+                    </section>
+                </section>
+
+                <section class="set">
+                    <section class="icon">
+                        <i class="fa fa-3x fa-globe"></i>
+                    </section>
+                    <section class="text">
+                        <a href="">www.zaman.com</a>
+                    </section>
+                </section>
+
+                <section class="set">
+                    <section class="icon">
+                        <i class="fa fa-3x fa-envelope"></i>
+                    </section>
+                    <section class="text">
+                        zamanahmad909@gmail.com
+                    </section>
+                </section>
+            </section>
+
+            <section class="heading">
+                <h1>Skills</h1>
+            </section>
+            <section class="detail">
+                <section class="set">
+                    <section class="icon1">
+                        <img src="html5.png" alt="" height="70px" width="70px">
+                    </section>
+                    <section class="text1">
+                        Html 5
+                    </section>
+                </section>
+                <section class="set1">
+                    <section class="icon1">
+                        <img src="css.png" alt="" height="70px" width="70px">
+                    </section>
+                    <section class="text1">
+                        CSS 3
+                    </section>
+                </section>
+                <section class="set1">
+                    <section class="icon1">
+                        <img src="js.png" alt="" height="70px" width="70px">
+                    </section>
+                    <section class="text1">
+                        Java Script 5
+                    </section>
+                </section>
+                <section class="set1">
+                    <section class="icon1">
+                        <img src="bootsrap.png" alt="" height="70px" width="70px">
+                    </section>
+                    <section class="text1">
+                        Bootstrap 4
+                    </section>
+                </section>
+                <section class="set1">
+                    <section class="icon1">
+                        <img src="php.png" alt="" height="50px" width="50px">
+                    </section>
+                    <section class="text1">
+                        PHP 7
+                    </section>
+                </section>
+
+                <section class="heading">
+                    <h1>Hobbies</h1>
+                </section>
+                <section class="hdetail">
+                    <ul>
+                        <li>Swiming</li>
+                        <li>Snooker</li>
+                        <li>Selective Study</li>
+                        <li>Chess</li>
+
+                    </ul>
+                </section>
+            </section>
 
 
-	<h1>About:</h1>
-	<h3>Searching for the opportunity to bring knowledge and experience with programming, technology engineering, and in
-		Development where my dedication will be utilized with your prestigious company while incorporating critical
-		thinking, problem solving, and leadership. </h3>
-	<h1>Education:</h1>
-	<ul>
-		<li>
-			<h3>Bachelor of Science in Computer Science</h3>
-		</li>
-		<h2><a href="https://www.uol.edu.pk">University of Lahore</a> </h2>
-		<li>
-			<h3>F.sc Pre engineering</h3>
-		</li>
-		<h2><a href="www.biselahore.com">Punjab College</a> </h2>
-		<li>
-			<h3>Matriculation</h3>
-		</li>
-		<h2><a href="www.biselahore.com">Unique High School</a> </h2>
-	</ul>
-	<br>
+        </section>
+        <section class="mcr">
+            <section class="about">
+                <section class="heading">
+                    <h1>About Me</h1>
+                </section>
+                <section class="text2">
+                    <p>
+                        Deep understanding of SDLC, STLC, Defect life cycle. Knowledge of agile methodologies using in
+                        development of applications. Good knowledge of writing code in a standard way, designing, coding
+                        and modifying websites, from layout to function and according to a client's specifications.
+                        Strive to create visually appealing sites that feature user-friendly design and clear navigation
+                    </p>
+                </section>
+            </section>
+            <section class="work">
+                <section class="heading">
+                    <h1>Work Expirence</h1>
+                </section>
+                <section class="cname">
+                    <section class="chead">
+                        <h2>
+                            Sumico Technologies
+                        </h2>
+                        <p>
+                            AO an NDT Engineering Service provider for Plant machinary and equipment.
+                        </p>
+                    </section>
+                    <section class="jd">
+                        <date>From</date> 15/7/2019 <date>To</date> 15/3/2019
+                        <p>Working as a web Developer to develop new website for company and its sister concern
+                            companies and maintain currently working websties.</p>
+                    </section>
+                </section>
+
+                <section class="cname">
+                    <section class="chead">
+                        <h2>
+                            OBOX DigiTech
+                        </h2>
+                        <p>
+                            Software House Providing Web Development Services Globaly.
+                        </p>
+                    </section>
+                    <section class="jd">
+                        <date>From</date> 1/2/2017 <date>To</date> 1/5/2017
+                        <p>I have done 3-month internship in this company as a web developer which helps me to build my
+                            final year project. FYP consist of Property Portal as like zameen.com, lamudi.com </p>
+                    </section>
+                </section>
+
+                <section class="cname">
+                    <section class="chead">
+                        <h2>
+                            DataTech
+                        </h2>
+                        <p>
+                            Software House Providing Web and App Development Services Globaly.
+                        </p>
+                    </section>
+                    <section class="jd">
+                        <date>From</date> 1/8/2016 <date>To</date> 1/11/2016
+                        <p>I have done 3-month internship in this company as an Android developer where I gather
+                            knowledge about professional development.
+                        </p>
+                    </section>
+                </section>
+
+                <section class="study">
+                    <section class="heading">
+                        <h1>Education</h1>
+                        <section class="cname1">
+                            <section class="chead1">
+                                <h3>Bachelor of Science in Computer Science</h3>
+                            </section>
+                            <section class="jd1">
+                                <date>From</date> 10/9/2013 <date>To</date> 01/06/2018 <date>From</date>
+                                <h3>University of Lahore</h3>
+                            </section>
+                        </section>
+
+                        <section class="cname1">
+                            <section class="chead1">
+                                <h3>F.SC Pre-Engineering</h3>
+                            </section>
+                            <section class="jd1">
+                                <date>From</date> 10/9/2013 <date>To</date> 01/06/2018 <date>From</date>
+                                <h3>Punjab Group of Colleges</h3>
+                            </section>
+                        </section>
+
+                        <section class="cname1">
+                            <section class="chead1">
+                                <h3>Matriculation</h3>
+                            </section>
+                            <section class="jd1">
+                                <date>From</date> 10/9/2013 <date>To</date> 01/06/2018 <date>From</date>
+                                <h3>Unique High School</h3>
+                            </section>
+                        </section>
+                    </section>
+
+                </section>
 
 
-	<h1>Work Experience:</h1>
-	<ul>
-		<li>
-			<h3>3 Months INTERNSHIP (WEB DEVELOPER) </h3>
-		</li>
-		<h2> OBOX DIGITECH </h2>
-		<br>
-		<li>
-			<h3>6 Months WEB DEVELOPER</h3>
-		</li>
-		<h2> SUMICO TECHNOLOGY </h2>
-	</ul>
-	<br>
 
-	<h1>Skills:</h1>
-	<ul><b>
-			<li>Html</li>
-			<li>CSS</li>
-			<li>Java Script</li>
-			<li>PHP</li>
-			<li>Wordpress</li>
-			<li>Jquery</li>
-			<li>Laravel</li>
-		</b>
-	</ul>
-	<br>
+            </section>
+        </section>
 
-	<h1>Accomplishments</h1>
-	<ul>
-		<li>
-			<h4>BSCS (HONORS) FINAL YEAR PROJECT </h4>
-		</li>
-		<p>Design and developed in PHP frame work LARAVEL 5.4 using HTML 5.0, CSS3, Bootstrap, JavaScript, MySQL, XAMPP.
-			Property portal is design and develop according to market needs. In it the main focus for the use of
-			convince of user it is developed very user friendly. It is like zameen.com but our main stream difference we
-			are providing construction material on user request from same platform. </p>
-
-		<li>
-			<h4>MOBILE APPLICATION DEVELOPMENT </h4>
-		</li>
-		<p>Developed an android app named “Cracker” in which the screen of smartphone is cracked whenever user touches the screen to perform any task. </p>
-
-		<li>
-			<h4>OPERATING SYSTEMS </h4>
-		</li>
-		<p>Developed a client server based chat system using a socket programming in C# language. In this system, there is a communication between server and client which provides the user to send or receive messages over the network. </p>
-	</ul>
-
-	<h1>Intrest:</h1>
-	<ul>
-		<li>E-Commerce </li>
-		<li>Swimming</li>
-		<li>Gaming</li>
-		<li>Photography</li>
-		<li>Travel &Tourism</li>
-		<li>Snooker</li>
-		<li>Socializing</li>
-	</ul>
-
-	<h1>Contact Details:</h1>
-	<h3>phone#</h3>
-	<p><b>0300-2884488</b></p>
-	<h3>Email</h3>
-	<p><b>zamanahmad909@gmail.com</b></p>
-	<h3>postal address</h3>
-	<p><b>H# XYZ IN ABC TOWN</b></p>
-
-
+    </maincontent>
 </body>
 
 </html>
